# assess_project

./: .env  .env.example  .gitignore  AI_API_配置说明.md  README.md  main.py  pyproject.toml
config/: __init__.py  settings.py
data/: __init__.py  redis_keys.py
routers/: functions.py  summary.py  tasks.py  translation.py
schemas/: __init__.py  requests.py  responses.py
services/: ai_providers.py  ai_service.py  task_service.py
utils/: error_handlers.py  json_middleware.py  logger.py  redis_client.py  text_processor.py
